[CLD-274] Fixes desktop whitespace issue

--- a/src/styles/pages/page-container.scss
+++ b/src/styles/pages/page-container.scss
@@ -18,6 +18,7 @@
 
 .pageContainer.isDesktop {
   width: 100%;
+  height: 100vh;
 }
 
 .menuContainer {
@@ -61,6 +62,10 @@
   }
 }
 
+.menuSticky.isDesktop {
+  top: 0;
+}
+
 .controlsWrapper {
   position: absolute;
   background:rgb(249, 251, 253);
@@ -72,6 +77,11 @@
   @media screen and (max-width: 768px) {
     height: 100%;
   }
+}
+
+.controlsWrapper.isDesktop {
+  top: 0;
+  height: 100%;
 }
 
 .controlsWrapper.isMobile {
